<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_track_order"
            android:icon="@drawable/ic_tracking"
            android:title="@string/menu_track_order" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_order_history" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_rate"
            android:title="@string/menu_ratings" />
    </group>
</menu>