<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="io.github.collins993.deliveryapp.dashboard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_drop_off_fragment"
            app:destination="@id/drop_off_fragment" />
        <action
            android:id="@+id/action_nav_home_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <argument
            android:name="address"
            app:argType="string"
            android:defaultValue=""/>
    </fragment>

    <fragment
        android:id="@+id/nav_track_order"
        android:name="io.github.collins993.deliveryapp.dashboard.ui.trackorder.TrackOrderFragment"
        android:label="@string/menu_track_order"
        tools:layout="@layout/fragment_track_order" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="io.github.collins993.deliveryapp.dashboard.ui.payment.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" >
        <action
            android:id="@+id/action_nav_payment_to_addCardFragment"
            app:destination="@id/addCardFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_order_history"
        android:name="io.github.collins993.deliveryapp.dashboard.ui.orderhistory.OrderHistoryFragment"
        android:label="@string/menu_order_history"
        tools:layout="@layout/fragment_order_history">
        <action
            android:id="@+id/action_nav_order_history_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_rating"
        android:name="io.github.collins993.deliveryapp.dashboard.ui.ratings.RatingsFragment"
        android:label="@string/menu_ratings"
        tools:layout="@layout/fragment_ratings"/>
    <fragment
        android:id="@+id/drop_off_fragment"
        android:name="io.github.collins993.deliveryapp.dashboard.ui.home.DropOffFragment"
        android:label="drop_off_fragment"
        tools:layout="@layout/drop_off_fragment" >
        <action
            android:id="@+id/action_drop_off_fragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_drop_off_fragment_to_dropOffMapsFragment"
            app:destination="@id/dropOffMapsFragment" />
        <argument
            android:name="myAddress"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="pickUpDetails"
            app:argType="io.github.collins993.deliveryapp.models.PickUpModel"
            app:nullable="true"/>


    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="io.github.collins993.deliveryapp.dashboard.ui.home.MapsFragment"
        android:label="Add Address"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/dropOffMapsFragment"
        android:name="io.github.collins993.deliveryapp.dashboard.ui.home.DropOffMapsFragment"
        android:label="DropOffMapsFragment"
        tools:layout="@layout/fragment_maps_drop_off">
        <action
            android:id="@+id/action_dropOffMapsFragment_to_drop_off_fragment"
            app:destination="@id/drop_off_fragment" />
        <argument
            android:name="pickUpDetails"
            app:argType="io.github.collins993.deliveryapp.models.PickUpModel"
            app:nullable="true"/>

    </fragment>
    <fragment
        android:id="@+id/addCardFragment"
        android:name="io.github.collins993.deliveryapp.dashboard.ui.payment.AddCardFragment"
        android:label="fragment_add_card"
        tools:layout="@layout/fragment_add_card" >
        <action
            android:id="@+id/action_addCardFragment_to_nav_payment"
            app:destination="@id/nav_payment" />
    </fragment>
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="io.github.collins993.deliveryapp.dashboard.ui.orderhistory.OrderDetailsFragment"
        android:label="fragment_order_details"
        tools:layout="@layout/fragment_order_details" >
        <action
            android:id="@+id/action_orderDetailsFragment_to_nav_order_history"
            app:destination="@id/nav_order_history" />
        <argument
            android:name="orderDetails"
            app:argType="io.github.collins993.deliveryapp.models.DeliveryModel" />
    </fragment>
</navigation>